--- a/package.json
+++ b/package.json
@@ -12,20 +12,19 @@
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@vercel/analytics": "^1.5.0",
-    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.509.0",
     "motion": "^12.10.5",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-activity-calendar": "^2.7.11",
     "react-dom": "^19.0.0",
     "react-rough-notation": "^1.0.5",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -33,9 +32,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "tailwindcss": "3.4",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5"
   }
