--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-activity-calendar": "^2.7.11",
     "react-dom": "^18.3.1",
+    "react-github-calendar": "^4.5.9",
     "react-rough-notation": "^1.0.5",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
